--- a/src/blocks/contacts/index.ejs
+++ b/src/blocks/contacts/index.ejs
@@ -2,23 +2,23 @@
     <ul class="contacts-links">
         <li class="contacts-links__item contacts-links__item--github">
             <img class="contacts-links__icon" src="/images/icons/github.png" alt="GitHub">
-            <a class="contacts-links__link contacts-links__link--github" target="_blank" href="https://github.com/reo7sp"><%= i18n.githubContact %></a>
+            <a class="contacts-links__link contacts-links__link--github" target="_blank" href="https://github.com/reo7sp">Гитхаб</a>
         </li>
         <li class="contacts-links__item">
             <img class="contacts-links__icon" src="/images/icons/telegram.png" alt="Telegram">
-            <a class="contacts-links__link" target="_blank" href="https://t.me/reo7sp"><%= i18n.telegramContact %></a>
+            <a class="contacts-links__link" target="_blank" href="https://t.me/reo7sp">Телеграм</a>
         </li>
         <li class="contacts-links__item">
             <img class="contacts-links__icon" src="/images/icons/vk.png" alt="VK">
-            <a class="contacts-links__link" target="_blank" href="https://vk.com/reo7sp"><%= i18n.vkContact %></a>
+            <a class="contacts-links__link" target="_blank" href="https://vk.com/reo7sp">ВК</a>
         </li>
         <li class="contacts-links__item">
             <img class="contacts-links__icon" src="/images/icons/facebook.png" alt="Facebook">
-            <a class="contacts-links__link" target="_blank" href="https://facebook.com/reo7sp"><%= i18n.facebookContact %></a>
+            <a class="contacts-links__link" target="_blank" href="https://facebook.com/reo7sp">Фейсбук</a>
         </li>
         <li class="contacts-links__item">
             <img class="contacts-links__icon" src="/images/icons/skype.png" alt="Skype">
-            <a class="contacts-links__link" target="_blank" href="skype:reo_sp?add"><%= i18n.skypeContact %></a>
+            <a class="contacts-links__link" target="_blank" href="skype:reo_sp?add">Скайп</a>
         </li>
         <li class="contacts-links__item">
             <img class="contacts-links__icon" src="/images/icons/mail.png" alt="Email">
