--- a/src/blocks/header/index.ejs
+++ b/src/blocks/header/index.ejs
@@ -1,5 +1,4 @@
 <header class="page-header">
     <a class="page-header__link" href="https://oleg.rocks" data-no-printable-links>oleg.rocks</a>
-    <h1 class="page-header__title"><%= i18n.oleg %><span class="break-on-mobile"> </span><%= i18n.morozenkov %></h1>
-    <%# <p class="page-header__subtitle">@<b>reo7sp</b> <span class="page-header__language-switcher"><a href="/en.html" data-no-printable-links>English</a> | <a href="/" data-no-printable-links>Русский</a></span></p> %>
+    <h1 class="page-header__title">Олег<span class="break-on-mobile"> </span>Морозенков</h1>
 </header>
