--- a/src/blocks/education/index.ejs
+++ b/src/blocks/education/index.ejs
@@ -1,14 +1,14 @@
 <section class="section-with-margin education">
-    <h2 class="education__title"><%= i18n.education %></h2>
+    <h2 class="education__title">Образование</h2>
 
     <ul class="education__list">
         <li class="education-item">
-            <p class="education-item__text"><strong><%= i18n.bauman %></strong></p>
-            <p class="education-item__additional-text"><%= i18n.baumanSpec %></p>
+            <p class="education-item__text"><strong>МГТУ им. Н.Э. Баумана</strong></p>
+            <p class="education-item__additional-text">2016–2020, Машиностроительные технологии</p>
         </li>
         <li class="education-item">
-            <p class="education-item__text"><strong><%= i18n.technopark %></strong></p>
-            <p class="education-item__additional-text"><%= i18n.technoparkSpec %></p>
+            <p class="education-item__text"><strong>Технопарк Mail.Ru</strong></p>
+            <p class="education-item__additional-text">2017–2018, Системный архитектор, Web, Highload, PostgreSQL, C++, Python</p>
             <p class="education-item__additional-text">
                 <a href="https://park.mail.ru/curriculum/program/main/" target="_blank">Программа</a>
                 &nbsp;
@@ -17,10 +17,10 @@
         </li>
         <li class="education-item">
             <p class="education-item__text">
-                <strong><%= i18n.introToMl %></strong> / <%- i18n.introToMlSpec %>
+                <strong>Введение в машинное обучение</strong> / НИУ&nbsp;ВШЭ
             </p>
             <p class="education-item__additional-text">
-                <a href="https://www.coursera.org/account/accomplishments/certificate/NANEYSFHTVTZ" target="_blank"><%= i18n.courseraCertificate %></a>
+                <a href="https://www.coursera.org/account/accomplishments/certificate/NANEYSFHTVTZ" target="_blank">Сертификат Курсеры</a>
             </p>
         </li>
     </ul>
