--- a/src/blocks/giraffe-background-notice/index.ejs
+++ b/src/blocks/giraffe-background-notice/index.ejs
@@ -1,3 +1,3 @@
 <aside class="giraffe-background-notice">
-    <small class="gray"><%= i18n.giraffeNotice %></small>
+    <small class="gray">С компьютера жирафик будет с параллаксом</small>
 </aside>
