--- a/src/blocks/activity/index.ejs
+++ b/src/blocks/activity/index.ejs
@@ -4,7 +4,7 @@
     <ul class="activity__list">
         <li class="activity-item">
             <p class="activity-item__text"><strong>Менторство в Технопарке Mail.Ru</strong></p>
-            <p class="activity-item__additional-text">Фронтенд, фев 2018 – текущее время</p>
+            <p class="activity-item__additional-text">Фронтенд, фев 2018 – текущее время.</p>
         </li>
     </ul>
 </section>
