--- a/src/blocks/education/index.ejs
+++ b/src/blocks/education/index.ejs
@@ -4,11 +4,11 @@
     <ul class="education__list">
         <li class="education-item">
             <p class="education-item__text"><strong>МГТУ им. Н.Э. Баумана</strong></p>
-            <p class="education-item__additional-text">2016–2020, Машиностроительные технологии</p>
+            <p class="education-item__additional-text">2016–2020. Машиностроительные технологии.</p>
         </li>
         <li class="education-item">
             <p class="education-item__text"><strong>Технопарк Mail.Ru</strong></p>
-            <p class="education-item__additional-text">2017–2018, Системный архитектор, Web, Highload, PostgreSQL, C++, Python</p>
+            <p class="education-item__additional-text">2017–2018. Системный архитектор, Web, Highload, PostgreSQL, C++, Python.</p>
             <p class="education-item__additional-text">
                 <a href="https://park.mail.ru/curriculum/program/main/" target="_blank">Программа</a>
                 &nbsp;
@@ -19,7 +19,10 @@
             <p class="education-item__text">
                 <strong>Введение в машинное обучение</strong> / НИУ&nbsp;ВШЭ
             </p>
+            <p class="education-item__additional-text">Авг 2016. Деревья, SVM, регрессия, кластеризация, PCA, нейросети, бустинг.</p>
             <p class="education-item__additional-text">
+                <a href="https://www.coursera.org/learn/vvedenie-mashinnoe-obuchenie" target="_blank">Страница курса</a>
+                &nbsp;
                 <a href="https://www.coursera.org/account/accomplishments/certificate/NANEYSFHTVTZ" target="_blank">Сертификат Курсеры</a>
             </p>
         </li>
