--- a/src/blocks/employment/index.ejs
+++ b/src/blocks/employment/index.ejs
@@ -10,8 +10,8 @@
                     <a class="employment-item__link" href="https://ktsstudio.com/projects">Сайт</a>
                 </p>
             </div>
-            <p class="employment-item__text">Июль 2017 – текущее время</p>
-            <p class="employment-item__text">Golang Backend</p>
+            <p class="employment-item__text">Июль 2017 – текущее время.</p>
+            <p class="employment-item__text">Golang Backend.</p>
             <div class="employment-item__info-labels">
                 <div class="employment-item__info-label employment-item__info-label--golang">golang</div>
                 <div class="employment-item__info-label employment-item__info-label--tarantool">tarantool</div>
@@ -19,7 +19,7 @@
                 <div class="employment-item__info-label employment-item__info-label--fasthttp">fasthttp</div>
                 <div class="employment-item__info-label employment-item__info-label--rpm">rpm</div>
             </div>
-            <p class="employment-item__text">Data Scientist</p>
+            <p class="employment-item__text">Data Scientist.</p>
             <div class="employment-item__info-labels">
                 <div class="employment-item__info-label employment-item__info-label--python">python</div>
                 <div class="employment-item__info-label employment-item__info-label--tensorflow">tensorflow</div>
