--- a/src/blocks/work/index.ejs
+++ b/src/blocks/work/index.ejs
@@ -116,7 +116,7 @@
                 {title: "telegram api", cssClass: 'telegram'},
             ],
             links: [
-                {title: "Гитхаб", url: 'https://github.com/reo7sp/tgbot-cpp', stars: 150, doubleStar: true},
+                {title: "Гитхаб", url: 'https://github.com/reo7sp/tgbot-cpp', stars: 160, doubleStar: true},
                 {title: "Документация", url: 'https://reo7sp.github.io/tgbot-cpp'},
             ]
         }) %>
@@ -186,4 +186,12 @@
         <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=go">Go</a><b>,</b>
         <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=java">Java</a>
     </p>
+</div>
+
+<div class="section-with-margin extra-footer">
+    <img class="contacts-links__icon" src="images/icons/instagram.png" alt="Instagram">
+    <a class="contacts-links__link" target="_blank" href="https://instagram.com/reo7sp">Ещё Инстаграм</a>
+    <br>
+    <img class="contacts-links__icon" src="images/icons/things.png" alt="Штуки">
+    <a class="contacts-links__link" target="_blank" href="https://olezh.es">Штуки</a>
 </div>
