--- a/src/blocks/header/index.ejs
+++ b/src/blocks/header/index.ejs
@@ -1,4 +1,5 @@
 <header class="page-header">
     <a class="page-header__link" href="https://oleg.rocks" data-no-printable-links>oleg.rocks</a>
     <h1 class="page-header__title">Олег<span class="break-on-mobile"> </span>Морозенков</h1>
+    <p class="page-header__subtitle">Программист. Занимаюсь анализом данных и бекендом.</p>
 </header>
