--- a/src/blocks/work/index.ejs
+++ b/src/blocks/work/index.ejs
@@ -126,7 +126,7 @@
                 Пересылает новости из группы ВК в Телеграмм канал.
             `,
             labels: [
-                {title: "bot", cssClass: 'second'},
+                {title: "бот", cssClass: 'second'},
                 {title: "open source", cssClass: 'first'},
                 {title: "python", cssClass: 'cpp'},
                 {title: "telegram api", cssClass: 'telegram'},
@@ -144,7 +144,7 @@
             `,
             labels: [
                 {title: "работа в команде", cssClass: 'first'},
-                {title: "игровой проект", cssClass: 'second'},
+                {title: "геймдев", cssClass: 'second'},
                 {title: "unity3d", cssClass: 'unity'},
                 {title: "uframe", cssClass: 'unity'},
                 {title: "spine", cssClass: 'unity'},
@@ -161,7 +161,7 @@
             `,
             labels: [
                 {title: "фриланс", cssClass: 'first'},
-                {title: "игровой проект", cssClass: 'second'},
+                {title: "геймдев", cssClass: 'second'},
                 {title: "unity3d", cssClass: 'unity'},
                 {title: "steam greenlight", cssClass: 'steam'},
             ],
