--- a/src/blocks/header/index.scss
+++ b/src/blocks/header/index.scss
@@ -19,8 +19,8 @@
         @media print {
             display: inline-block;
             float: right;
-            line-height: 37px;
             font-size: 125%;
+            padding-top: 12px;
         }
     }
 }
