--- a/src/blocks/work/index.ejs
+++ b/src/blocks/work/index.ejs
@@ -26,11 +26,9 @@
         <%- include('item', {
             title: false,
             description: `
-                Инвестиционная компания.
+                Разгрузка техподдержки с помощью чатбота.
                 <br>
-                Разрабатывал сервис, который предсказывает, какие рыночные стратегии заказчика будут прибыльными на следующий день.
-                <br>
-                Использовал рекурентные нейронные сети и выводил дополнительные эвристики для улучшения результата.
+                Занимался обработкой опечаток и применением различных текстовых моделей, таких как например doc2vec.
             `,
             labels: [
                 {title: "kts", cssClass: 'first'},
