--- a/src/blocks/global.scss
+++ b/src/blocks/global.scss
@@ -11,10 +11,11 @@ body {
 a {
     color: #0093d2;
     text-decoration: none;
+    border-bottom: 1px solid rgba(0,96,160,.2);
 
     &:hover {
-        color: #0067a8;
-        text-decoration: underline;
+        color: #d04000;
+        border-bottom-color: rgba(208,64,0,.2);
     }
 }
 
