--- a/src/blocks/employment/index.ejs
+++ b/src/blocks/employment/index.ejs
@@ -1,16 +1,16 @@
 <section class="section-with-margin employment">
-    <h2 class="employment__title">Работа</h2>
+    <h2 class="employment__title"><%- i18n.employment %></h2>
 
     <ul class="employment__list">
         <li class="employment-item">
             <div class="employment-item__header">
                 <img class="employment-item__logo" src="images/employment/kts.png">
                 <p class="employment-item__title">
-                    <strong>Студия KTS</strong>
-                    <a class="employment-item__link" href="https://ktsstudio.com/projects">Сайт</a>
+                    <strong><%- i18n.ktsStudio %></strong>
+                    <a class="employment-item__link" href="https://ktsstudio.com/projects"><%- i18n.site %></a>
                 </p>
             </div>
-            <p class="employment-item__text">Июль 2017 – текущее время.</p>
+            <p class="employment-item__text"><%- i18n.july %> 2017 – <%- i18n.now %></p>
             <p class="employment-item__text">Golang Backend.</p>
             <div class="employment-item__info-labels">
                 <div class="employment-item__info-label employment-item__info-label--golang">golang</div>
