--- a/src/blocks/activity/index.ejs
+++ b/src/blocks/activity/index.ejs
@@ -1,10 +1,17 @@
 <section class="section-with-margin activity">
-    <h2 class="activity__title">Деятельность</h2>
+    <h2 class="activity__title"><%- i18n.activity %></h2>
 
     <ul class="activity__list">
         <li class="activity-item">
-            <p class="activity-item__text"><strong>Менторство в Технопарке Mail.Ru</strong></p>
-            <p class="activity-item__additional-text">Фронтенд, фев 2018 – текущее время.</p>
+            <p class="activity-item__text"><strong><%- i18n.metagraphPaper %></strong> — <%- i18n.paper %></p>
+            <p class="activity-item__additional-text"><%- i18n.metagraphPaperDesc %></p>
+            <p class="education-item__additional-text">
+                <a href="/files/chatbot-paper.pdf" target="_blank"><%- i18n.paperAnnotation %></a>
+            </p>
+        </li>
+        <li class="activity-item">
+            <p class="activity-item__text"><strong><%- i18n.technoparkMentorship %></strong></p>
+            <p class="activity-item__additional-text"><%- i18n.technoparkMentorshipDesc %></p>
         </li>
     </ul>
 </section>
