--- a/src/blocks/education/index.ejs
+++ b/src/blocks/education/index.ejs
@@ -1,29 +1,29 @@
 <section class="section-with-margin education">
-    <h2 class="education__title">Образование</h2>
+    <h2 class="education__title"><%- i18n.education %></h2>
 
     <ul class="education__list">
         <li class="education-item">
-            <p class="education-item__text"><strong>МГТУ им. Н.Э. Баумана</strong></p>
-            <p class="education-item__additional-text">2016–2020. Машиностроительные технологии.</p>
+            <p class="education-item__text"><strong><%- i18n.bauman %></strong></p>
+            <p class="education-item__additional-text"><%- i18n.baumanDesc %></p>
         </li>
         <li class="education-item">
-            <p class="education-item__text"><strong>Технопарк Mail.Ru</strong></p>
-            <p class="education-item__additional-text">2017–2018. Системный архитектор, Web, Highload, PostgreSQL, C++, Python.</p>
+            <p class="education-item__text"><strong><%- i18n.technopark %></strong></p>
+            <p class="education-item__additional-text"><%- i18n.technoparkDesc %></p>
             <p class="education-item__additional-text">
-                <a href="https://park.mail.ru/curriculum/program/main/" target="_blank">Программа</a>
+                <a href="https://park.mail.ru/curriculum/program/main/" target="_blank"><%- i18n.program %></a>
                 &nbsp;
-                <a href="https://github.com/frontend-park-mail-ru/2017_2_glitchless" target="_blank">Проект 1-го курса</a>
+                <a href="https://github.com/frontend-park-mail-ru/2017_2_glitchless" target="_blank"><%- i18n.firstCourseProject %></a>
             </p>
         </li>
         <li class="education-item">
             <p class="education-item__text">
-                <strong>Введение в машинное обучение</strong> / НИУ&nbsp;ВШЭ
+                <strong><%- i18n.introToMl %></strong> / <%- i18n.hse %>
             </p>
-            <p class="education-item__additional-text">Авг 2016. Деревья, SVM, регрессия, кластеризация, PCA, нейросети, бустинг.</p>
+            <p class="education-item__additional-text"><%- i18n.introToMlDesc %></p>
             <p class="education-item__additional-text">
-                <a href="https://www.coursera.org/learn/vvedenie-mashinnoe-obuchenie" target="_blank">Страница курса</a>
+                <a href="https://www.coursera.org/learn/vvedenie-mashinnoe-obuchenie" target="_blank"><%- i18n.courseSite %></a>
                 &nbsp;
-                <a href="https://www.coursera.org/account/accomplishments/certificate/NANEYSFHTVTZ" target="_blank">Сертификат Курсеры</a>
+                <a href="https://www.coursera.org/account/accomplishments/certificate/NANEYSFHTVTZ" target="_blank"><%- i18n.courseraCertificate %></a>
             </p>
         </li>
     </ul>
