--- a/src/blocks/work/item.ejs
+++ b/src/blocks/work/item.ejs
@@ -1,6 +1,6 @@
 <li class="work__list-elem work-item">
     <% if (title === false) { %>
-    <div class="work-item__title work-item__title--hidden">(скрыто)</div>
+    <div class="work-item__title work-item__title--hidden"><%- i18n.hidden %></div>
     <% } else { %>
     <div class="work-item__title"><%- title %></div>
     <% } %>
@@ -23,7 +23,7 @@
                 <% if (links[i].doubleStar) { %>
                 <svg class="work-item-stat__double-star" aria-label="stars" height="18" role="img" version="1.1" viewBox="0 -4 14 18" width="14"><path fill-rule="evenodd" d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74z"></path></svg>
                 <% } %>
-                <span class="work-item-stat__count"><%= links[i].stars %>+</span>
+                <span class="work-item-stat__count"><%- links[i].stars %>+</span>
             </span>
             <% } %>
         </div>
