--- a/src/index-common.ejs
+++ b/src/index-common.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="<%- i18n.langCode %>">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Шарю в Анализе данных и Вебе">
-    <title>Олег Морозенков</title>
+    <meta name="description" content="<%- i18n.pageDesc %>">
+    <title><%- i18n.oleg %> <%- i18n.morozenkov %></title>
 </head>
 <body>
 
@@ -19,7 +19,7 @@
     <%- include('blocks/giraffe-background-notice/index') %>
 </div>
 
-<div id="giraffe-hi-text" class="hidden">Приветик</div>
+<div id="giraffe-hi-text" class="hidden"><%- i18n.giraffeHi %></div>
 
 <%- include('blocks/yandex-metrica/index.ejs') %>
 
