--- a/src/blocks/activity/index.ejs
+++ b/src/blocks/activity/index.ejs
@@ -3,7 +3,7 @@
 
     <ul class="activity__list">
         <li class="activity-item">
-            <p class="activity-item__text"><strong><%- i18n.metagraphPaper %></strong> — <%- i18n.paper %></p>
+            <p class="activity-item__text"><strong><%- i18n.metagraphPaper %></strong>&nbsp;— <%- i18n.paper %></p>
             <p class="activity-item__additional-text"><%- i18n.metagraphPaperDesc %></p>
             <p class="education-item__additional-text">
                 <a href="/files/chatbot-paper.pdf" target="_blank"><%- i18n.paperAnnotation %></a>
