--- a/src/i18n/en.ejs
+++ b/src/i18n/en.ejs
@@ -7,107 +7,161 @@
 <% i18n.morozenkov = "Morozenkov" %>
 <% i18n.giraffeNotice = "Open this page on desktop to see giraffe with cool parallax effect" %>
 <% i18n.giraffeHi = "Hi there" %>
+<% i18n.subtitle = "Software developer. I do data science and web backend." %>
+<% i18n.language = "Language" %>
 
 <%# Contacts %>
 <% i18n.githubContact = "GitHub" %>
 <% i18n.telegramContact = "Telegram" %>
 <% i18n.skypeContact = "Skype" %>
 <% i18n.vkContact = "VK" %>
-<% i18n.linkedinContact = "LinkedIn" %>
 <% i18n.facebookContact = "Facebook" %>
+
+<%# Dates %>
+<% i18n.feb = "February" %>
+<% i18n.july = "July" %>
+<% i18n.now = "now" %>
 
 <%# Employment %>
 <% i18n.employment = "Employment" %>
 <% i18n.site = "Site" %>
-<% i18n.july = "July" %>
-<% i18n.now = "now" %>
-<% i18n.kts = "KTS Studio" %>
+<% i18n.ktsStudio = "KTS Studio" %>
 
 <%# Education %>
 <% i18n.education = "Education" %>
 <% i18n.bauman = "Bauman Moscow State Technical University" %>
-<% i18n.baumanSpec = "2016–2020, Bachelor of Engineering" %>
+<% i18n.baumanDesc = "2016–2020, Bachelor of Engineering." %>
 <% i18n.technopark = "Technopark Mail.Ru" %>
-<% i18n.technoparkSpec = "2017–2018, Software Architect, Web, Highload, Java, Spring, C++, Python" %>
+<% i18n.technoparkDesc = "2017–2018, Software Architect, Web, Highload, Java, Spring, C++, Python." %>
+<% i18n.program = "Curriculum" %>
+<% i18n.firstCourseProject = "First year project" %>
 <% i18n.introToMl = "Introduction to machine learning" %>
-<% i18n.introToMlSpec = "University Higher School of Economics" %>
+<% i18n.hse = "University Higher School of Economics" %>
+<% i18n.introToMlDesc = "Aug 2016. Decision trees, SVM, regression, clusterization, PCA, neural networks, boosting." %>
+<% i18n.courseSite = "Site" %>
 <% i18n.courseraCertificate = "Coursera certificate" %>
 
+<%# Activity %>
+<% i18n.activity = "Activity" %>
+<% i18n.technoparkMentorship = "Mentorship in Technopark Mail.Ru" %>
+<% i18n.technoparkMentorshipDesc = "Frontend, feb 2018 – now." %>
+<% i18n.metagraphPaper = "«The hybrid chatbot system combining Q&A and knowledgebase approaches»" %>
+<% i18n.paper = "scientific paper" %>
+<% i18n.paperAnnotation = "Annotation" %>
+<% i18n.metagraphPaperDesc = `
+It will be published soon in CEUR-WS and indexed in Scopus.
+<br> 
+We consider the development of a hybrid chatbot system, which can respond to the FAQ, and conduct a dialogue using the knowledge base.
+The knowledge base uses a meta-graph model.
+` %>
+
 <%# Portfolio %>
+<% i18n.kts1 = false %>
+<% i18n.kts1Desc = `
+Investment company.
+<br>
+Developed a service that predicts which customer's market strategies that will be profitable the next day.
+<br>
+I used recurrent neural networks and derived additional heuristics to improve the result.
+` %>
+
+<% i18n.kts2 = false %>
+<% i18n.kts2Desc = `
+Helping technical support to cope with lots of users via chatbot.
+<br>
+Worked out handling of typos and used various text models, such as for example doc2vec.
+` %>
+
+<% i18n.ktsLinguistics = "kts_linguistics" %>
+<% i18n.ktsLinguisticsDesc = `
+Library for working with Russian language linguistics.
+<br>
+It can phonetize words, correct typos, and also provides corpora and thesaurus.
+` %>
+
 <% i18n.voiceToVector = "Voice to vector" %>
-<% i18n.voiceToVectorDesc = "Making voices comparable" %>
-<% i18n.face3dMatch = "Face3dMatch" %>
-<% i18n.face3dMatchDesc = "Sign in via a 3d model of the face" %>
+<% i18n.voiceToVectorDesc = `
+Comparing votes on sameness. Voice to vector conversion.
+<br>
+Firstly, we did the Fourier transform to make spectrograms. Then, we used triplet from convolutional neural networks to obtain a vector.
+` %>
+
 <% i18n.gotohack2 = "GoToHack2 + MTS" %>
-<% i18n.gotohack2Desc = "Case by MTS company: prediction of post popularity in VK group of TalentEdme project" %>
-<% i18n.movieRecommend = "Movie recommender system" %>
-<% i18n.movieRecommendDesc = "Test task for GoTo Machine Learning school in summer 2016" %>
-<% i18n.raycord = "Raycord Legends" %>
-<% i18n.raycordDesc = "Rayman Legends and My Little Pony crossover game. Features cool graphics" %>
-<% i18n.mars2000 = "MARS 2000" %>
-<% i18n.mars2000Desc = "Top-down oldschool shooter" %>
-<% i18n.letsNukeThem = "Let's nuke them" %>
-<% i18n.letsNukeThemDesc = "Strategy game" %>
-<% i18n.kaniku = "Kaniku" %>
-<% i18n.kanikuDesc = "MVC microframework for cocos2d-x javascript games" %>
-<% i18n.atkGloria = "ATK Gloria" %>
-<% i18n.atkGloriaDesc = "Website of travel company in Nizhny Novgorod" %>
-<% i18n.thylogale = "Thylogale" %>
-<% i18n.thylogaleDesc = "Content management system for static sites" %>
+<% i18n.gotohack2Desc = `
+Case: MTS: predicting the likes, reposts and likes from the posts in the group TalentEdme.
+<br>
+We compared the content of posts and user's interests using LDA.
+` %>
+
 <% i18n.tgbotCpp = "tgbot-cpp" %>
-<% i18n.tgbotCppDesc = "C++ library for Telegram bot API" %>
+<% i18n.tgbotCppDesc = `
+C++ library for Telegram bot API.
+` %>
+
 <% i18n.vkChannelify = "VK Channelify" %>
-<% i18n.vkChannelifyDesc = "Repost posts from VK group to Telegram channel" %>
-<% i18n.recast = "Recast" %>
-<% i18n.recastDesc = "MMORPG game with user-defined magic" %>
+<% i18n.vkChannelifyDesc = `
+Forwards posts from the VK group to the Telegram channel.
+` %>
+
+<% i18n.raycord = "Raycord Legends" %>
+<% i18n.raycordDesc = `
+MLP & Rayman Legends crossover.
+` %>
+
+<% i18n.mars2000 = "MARS 2000" %>
+<% i18n.mars2000Desc = `
+Oldschool top-down shooter.
+` %>
 
 <%# Portfolio controls %>
 <% i18n.myPortfolio = "Portfolio" %>
 <% i18n.dataScience = "Data science" %>
 <% i18n.nonDataScience = "Non data science" %>
-<% i18n.github = "GitHub" %>
-<% i18n.presentation = "Presentation" %>
-<% i18n.neuralNetworks = "neural networks" %>
-<% i18n.voiceProcessing = "voice processing" %>
+
+<% i18n.hidden = "(hidden)" %>
+<% i18n.kts = "kts" %>
+<% i18n.fintech = "fintech" %>
+<% i18n.recurrentNeuralNetwork = "recurrent neural networks" %>
 <% i18n.python = "python" %>
+<% i18n.tensorflow = "tensorflow" %>
+
+<% i18n.chatbots = "chatbots" %>
+<% i18n.naturalTextProcessing = "natural text processing" %>
+
+<% i18n.openSource = "open source" %>
+<% i18n.library = "library" %>
+<% i18n.github = "GitHub" %>
+
+<% i18n.gotoSchool = "goto school" %>
+<% i18n.voiceProcessing = "voice processing" %>
 <% i18n.theano = "theano" %>
 <% i18n.lasagne = "lasagne" %>
-<% i18n.computerVision = "computer vision" %>
-<% i18n.dreconstruction = "3d reconstruction" %>
-<% i18n.scala = "scala" %>
-<% i18n.android = "android" %>
+<% i18n.presentation = "Presentation" %>
+
 <% i18n.hackathon = "hackathon" %>
-<% i18n.naturalTextProcessing = "natural text processing" %>
 <% i18n.vkApi = "vk api" %>
 <% i18n.winnerCertificate = "Winner&nbsp;certificate" %>
-<% i18n.recommenderSystem = "recommender system" %>
-<% i18n.worked = "worked" %>
-<% i18n.workingSince = "working since" %>
-<% i18n.game = "game" %>
-<% i18n.unity3d = "unity3d" %>
-<% i18n.uframe = "uframe" %>
-<% i18n.spine = "spine" %>
-<% i18n.youTube = "YouTube" %>
-<% i18n.freelance = "freelance" %>
-<% i18n.steamGreenlight = "steam greenlight" %>
-<% i18n.vk = "VK" %>
-<% i18n.inDev = "in development" %>
-<% i18n.cocos2d = "cocos2d-x" %>
-<% i18n.coffeescript = "coffeescript" %>
-<% i18n.framework = "framework" %>
-<% i18n.npm = "npm" %>
-<% i18n.starterKit = "Starter kit" %>
-<% i18n.website = "website" %>
-<% i18n.ruby = "ruby" %>
-<% i18n.rails = "rails" %>
-<% i18n.webApp = "web app" %>
-<% i18n.library = "library" %>
+
 <% i18n.cpp = "c++" %>
 <% i18n.boost = "boost" %>
 <% i18n.boostAsio = "boost asio" %>
 <% i18n.telegramApi = "telegram api" %>
-<% i18n.bot = "bot" %>
-<% i18n.serverGithub = "Server GitHub repo" %>
-<% i18n.client = "Client" %>
-<% i18n.seeGitHub = "See all open source projects on GitHub" %>
+<% i18n.documentation = "Documentation" %>
+
+<% i18n.bot = "бот" %>
+<% i18n.description = "Description" %>
+
+<% i18n.teamWork = "team work" %>
+<% i18n.game = "gamedev" %>
+<% i18n.unity3d = "unity3d" %>
+<% i18n.uframe = "uframe" %>
+<% i18n.spine = "spine" %>
+<% i18n.vk = "VK" %>
+<% i18n.youTube = "YouTube" %>
+
+<% i18n.freelance = "freelance" %>
+<% i18n.steam = "Steam" %>
+<% i18n.steamGreenlight = "steam greenlight" %>
+
+<% i18n.seeGitHub = "See open source on GitHub" %>
 <% i18n.byLang = "By language" %>
