--- a/src/i18n/ru.ejs
+++ b/src/i18n/ru.ejs
@@ -51,7 +51,8 @@
 <% i18n.metagraphPaperDesc = `
 Скоро будет опубликована в CEUR-WS и проиндексирована в Scopus.
 <br> 
-Рассматривается разработка гибридной системы чат-ботов, которая может так и отвечать по FAQ, так и вести диалог с использованием базы знаний. Для базы знаний используется метаграфовая модель.
+Рассматривается разработка гибридной системы чат-ботов, которая может так и отвечать по FAQ, так и вести диалог с использованием базы знаний.
+Для базы знаний используется метаграфовая модель.
 ` %>
 
 <%# Portfolio %>
@@ -113,45 +114,54 @@ MLP & Rayman Legends кроссовер.
 ` %>
 
 <%# Portfolio controls %>
-<% i18n.hidden = "(скрыто)" %>
 <% i18n.myPortfolio = "Портфолио" %>
 <% i18n.dataScience = "Анализ данных" %>
 <% i18n.nonDataScience = "Не анализ данных" %>
-<% i18n.github = "Гитхаб" %>
-<% i18n.presentation = "Презентация" %>
+
+<% i18n.hidden = "(скрыто)" %>
 <% i18n.kts = "kts" %>
-<% i18n.gotoSchool = "goto school" %>
-<% i18n.teamWork = "работа в команде" %>
-<% i18n.openSource = "open source" %>
 <% i18n.fintech = "финтех" %>
-<% i18n.chatbots = "чатботы" %>
 <% i18n.recurrentNeuralNetwork = "рекурентные нейросети" %>
-<% i18n.convolutionalNeuralNetwork = "сверточные нейросети" %>
-<% i18n.voiceProcessing = "обработка голоса" %>
 <% i18n.python = "python" %>
 <% i18n.tensorflow = "tensorflow" %>
+
+<% i18n.chatbots = "чатботы" %>
+<% i18n.naturalTextProcessing = "обработка текста" %>
+
+<% i18n.openSource = "open source" %>
+<% i18n.library = "библиотека" %>
+<% i18n.github = "Гитхаб" %>
+
+<% i18n.gotoSchool = "goto school" %>
+<% i18n.voiceProcessing = "обработка голоса" %>
 <% i18n.theano = "theano" %>
 <% i18n.lasagne = "lasagne" %>
+<% i18n.presentation = "Презентация" %>
+
 <% i18n.hackathon = "хакатон" %>
-<% i18n.naturalTextProcessing = "обработка текста" %>
 <% i18n.vkApi = "vk api" %>
 <% i18n.winnerCertificate = "Сертификат&nbsp;победителя" %>
-<% i18n.game = "геймдев" %>
-<% i18n.unity3d = "unity3d" %>
-<% i18n.uframe = "uframe" %>
-<% i18n.spine = "spine" %>
-<% i18n.youTube = "Ютюб" %>
-<% i18n.freelance = "фриланс" %>
-<% i18n.steam = "Стим" %>
-<% i18n.steamGreenlight = "steam greenlight" %>
-<% i18n.vk = "ВК" %>
-<% i18n.library = "библиотека" %>
+
 <% i18n.cpp = "c++" %>
 <% i18n.boost = "boost" %>
 <% i18n.boostAsio = "boost asio" %>
 <% i18n.telegramApi = "telegram api" %>
-<% i18n.bot = "бот" %>
 <% i18n.documentation = "Документация" %>
+
+<% i18n.bot = "бот" %>
 <% i18n.description = "Описание" %>
+
+<% i18n.teamWork = "работа в команде" %>
+<% i18n.game = "геймдев" %>
+<% i18n.unity3d = "unity3d" %>
+<% i18n.uframe = "uframe" %>
+<% i18n.spine = "spine" %>
+<% i18n.vk = "ВК" %>
+<% i18n.youTube = "Ютюб" %>
+
+<% i18n.freelance = "фриланс" %>
+<% i18n.steam = "Стим" %>
+<% i18n.steamGreenlight = "steam greenlight" %>
+
 <% i18n.seeGitHub = "Посмотреть опенсорс на Гитхабе" %>
 <% i18n.byLang = "По языкам" %>
