--- a/src/blocks/employment/index.ejs
+++ b/src/blocks/employment/index.ejs
@@ -10,21 +10,19 @@
                     <a class="employment-item__link" href="https://ktsstudio.com/projects"><%- i18n.site %></a>
                 </p>
             </div>
-            <p class="employment-item__text"><%- i18n.july %> 2017 – <%- i18n.now %></p>
-            <p class="employment-item__text">Golang Backend.</p>
-            <div class="employment-item__info-labels">
-                <div class="employment-item__info-label employment-item__info-label--golang">golang</div>
-                <div class="employment-item__info-label employment-item__info-label--tarantool">tarantool</div>
-                <div class="employment-item__info-label employment-item__info-label--postgresql">postgresql</div>
-                <div class="employment-item__info-label employment-item__info-label--fasthttp">fasthttp</div>
-                <div class="employment-item__info-label employment-item__info-label--rpm">rpm</div>
-            </div>
+            <p class="employment-item__text"><%- i18n.july %> 2017 – <%- i18n.now %>.</p>
             <p class="employment-item__text">Data Scientist.</p>
             <div class="employment-item__info-labels">
                 <div class="employment-item__info-label employment-item__info-label--python">python</div>
                 <div class="employment-item__info-label employment-item__info-label--tensorflow">tensorflow</div>
                 <div class="employment-item__info-label employment-item__info-label--keras">keras</div>
-                <div class="employment-item__info-label employment-item__info-label--mongodb">mongodb</div>
+            </div>
+            <p class="employment-item__text">Golang Backend.</p>
+            <div class="employment-item__info-labels">
+                <div class="employment-item__info-label employment-item__info-label--golang">golang</div>
+                <div class="employment-item__info-label employment-item__info-label--tarantool">tarantool</div>
+                <div class="employment-item__info-label employment-item__info-label--postgresql">postgresql</div>
+                <div class="employment-item__info-label employment-item__info-label--docker">docker</div>
             </div>
         </li>
     </ul>
